--- a/views/add_to_bot.ejs
+++ b/views/add_to_bot.ejs
@@ -29,7 +29,6 @@
 			<form>
 				<input id="category" required placeholder="Please enter in a category name" name="category" ><br>
 				<input id="value" required placeholder="Please enter in the value" name="value" ><br><br>
-				
 			</form>
 			<button>Submit</button>
 			<br><br><br><br>
@@ -37,6 +36,10 @@
 			<p> Before adding any category or value, please go to Wit and ensure that you have <br>proper added your intended category in the 'Understanding' tab</p>
 			<p> Once done, simply type in the same category in the field above and <br>specify the value you want the bot to return.</p>
 			<p>The value may also contain HTML</p>
+			<p>Here is a the format which has been used for all values(it should be used for all new values). </p>
+			<p>***words of encouragement first*** *line break here*</p>
+			<p>*bolden* Scripture heading *end bolden* *line break here*</p>
+			<p>Scripture text here (then hyphen), then *bolden*bible scripture verse*end bolden* *2 line breaks here*</p>
 			<p>For example, to bolden parts of a text, use the 'b' tags in HTML, (<b>Example</b>).</p>
 			<p><span style="color: red">NOTE!!<span>: No categories can bear the same name</p>
 			<h2>Edit / Delete prayers</h2>
