--- a/views/add_to_bot.ejs
+++ b/views/add_to_bot.ejs
@@ -39,7 +39,7 @@
 			<p>Here is a the format which has been used for all values(it should be used for all new values). </p>
 			<p>***words of encouragement first*** *line break here*</p>
 			<p>*bolden* Scripture heading *end bolden* *line break here*</p>
-			<p>Scripture text here (then hyphen), then *bolden*bible scripture verse*end bolden* *2 line breaks here*</p>
+			<p>Scripture text here (then hyphen), then *bolden class="verse"*bible scripture verse*end bolden* *2 line breaks here*</p>
 			<p>For example, to bolden parts of a text, use the 'b' tags in HTML, (<b>Example</b>).</p>
 			<p><span style="color: red">NOTE!!<span>: No categories can bear the same name</p>
 			<h2>Edit / Delete prayers</h2>
